# RAG_project

./: pyproject.toml  tasks.py
API/: aircraft_class.py  database.py  endpoints.py  main.py  openai_model.py
Database/: Aircraft_database.db
apps/csv_to_sql/: load_data.py  pyproject.toml
